--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,7 @@
+/BD_Connect/
+/Interact_Utilisateur.class
+/Managers/
+/Objects/
 /Requets/
 /connexion/
-/Requets/
-/Main.class
-/Objects/
-/BD_Connect/
+/Console/
