maj with user login and register

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,6 @@
-/BD_Connect/
-/Interact_Utilisateur.class
 /Managers/
-/Objects/
 /Requets/
-/connexion/
+/BD_Connect/
 /Console/
+/Objects/
+/data/
